--- a/docs/docs/cmd/spo/hidedefaultthemes/hidedefaultthemes-get.mdx
+++ b/docs/docs/cmd/spo/hidedefaultthemes/hidedefaultthemes-get.mdx
@@ -24,11 +24,44 @@ To use this command you have to have permissions to access the tenant admin site
 
 ## Examples
 
-Get the current value of the HideDefaultThemes setting
+Get the current value of the HideDefaultThemes setting.
 
 ```sh
 m365 spo hidedefaultthemes get
 ```
+
+## Response
+
+<Tabs>
+  <TabItem value="JSON">
+
+  ```json
+  false
+  ```
+
+  </TabItem>
+  <TabItem value="Text">
+
+  ```text
+  false
+  ```
+
+  </TabItem>
+  <TabItem value="CSV">
+
+  ```csv
+  false
+  ```
+
+  </TabItem>
+  <TabItem value="Markdown">
+
+  ```md
+  false
+  ```
+
+  </TabItem>
+</Tabs>
 
 ## More information
 
