--- a/docs/docs/cmd/spo/file/file-sharinglink-set.mdx
+++ b/docs/docs/cmd/spo/file/file-sharinglink-set.mdx
@@ -35,13 +35,13 @@ m365 spo file sharinglink set [options]
 
 ## Examples
 
-Updates an anonymous sharing link from a file by a specified site-relative URL with the expirationDateTime parameter
+Updates an anonymous sharing link from a file by a specified site-relative URL with the expirationDateTime parameter.
 
 ```sh
 m365 spo file sharinglink set --webUrl https://contoso.sharepoint.com --fileUrl "/sites/demo/Shared Documents/Document.docx" --id 7c9f97c9-1bda-433c-9364-bb83e81771ee --expirationDateTime "2023-01-09T16:57:00.000Z"
 ```
 
-Updates an anonymous sharing link from a file by id with the expirationDateTime parameter
+Updates an anonymous sharing link from a file by id with the expirationDateTime parameter.
 
 ```sh
 m365 spo file sharinglink set --webUrl https://contoso.sharepoint.com --fileId daebb04b-a773-4baa-b1d1-3625418e3234 --id 7c9f97c9-1bda-433c-9364-bb83e81771ee --expirationDateTime "2023-01-09T16:57:00.000Z"
